[package]
name = "crawl"
version = "0.1.1"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "rudra-runner"
test = false
doctest = false

[[bin]]
name = "unsafe-counter"
test = false
doctest = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
dotenv = "0.15"
flate2 = "1.0"
log = "0.4"
num_cpus = "1.13"
once_cell = "1.4.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rayon = "1.3.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0.20", features = ["serde"] }
structopt = "0.3.18"
# Updating syn panics the traversal
syn = { version = "=1.0.14", default-features = false, features = ["full", "parsing", "visit"] }
tar = "0.4.29"
thiserror = "1.0"
tokei = "12.1.2"
